fixed cofactor returning multiple result and addition returning extra spaces in result

--- a/css/app.css
+++ b/css/app.css
@@ -38629,6 +38629,11 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+textarea{
+  box-sizing: border-box;
+  width: 100%;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
